--- a/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
+++ b/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
@@ -6,27 +6,73 @@
     <style>
         form{
             border-collapse: collapse;
-            width: 50%;
+            #width: 50%;
         }
     </style>
 
+    <script type="text/javascript">
+            $(document).ready(function(){
+             setInterval(findYellow,1000);
+             function findYellow(){
+              $("tr.blinkYellow").each(function(){
+                   $(this).toggleClass("background-color-yellow");
+                 })
+                }
+            });
+    </script>
+
+    <style>
+    table#myTable {
+        align:"left";
+        border: 1px solid black;
+        height: 8px;
+        width: 80%;
+        text-align: left;
+        border-collapse: collapse;
+        font-size: 10px;
+    }
+    .background-color-yellow { background-color: palegreen; }
+    </style>
 
     {% include 'userpanal/Detail.html' %}
 
-    <div class="col-xs-9">
-        <div class="container-fluid">
 
-        <div class="page-header"><h2>Live Train Status</h2></div>
 
-        <form role = "form" action="" method="post" enctype="multipart/form-data">
-           {% csrf_token %}
-           <div class = "form-group">
-              <input class = "form-control input-lg" type = "text" name="trainno" placeholder ="Enter Train Number">
-           </div>
-           <button type = "submit" class = "btn btn-default">Submit</button>
-        </form>
-        </div>
+    <div class="col-xs-9 col-md-9">
+            <div class="page-header">
+                <h2>Live Train Status</h2>
+            </div>
+
+            <div class="container-fluid  img-responsive">
+                <div class="row">
+                    <div class="col-xs-9 col-md-9">
+                        <form id="livetrainstatus">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <div class="input-group form-group">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-primary  center-block " type="button" ><strong>Train Number</strong></button>
+                                    </span>
+                                    <input class="form-control dd_user_input"  id="trainNumber" type="text" placeholder="Enter Train Number">
+                                    <span class="input-group-btn">
+                                        <button type = "submit" class = "btn btn-info">Submit</button>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
     </div>
+    <div id="live_train_status_html"></div>
 
+
+
+<script src="{% static 'Live_Train_Status/js/liveTrainStatus.js' %}"></script>
 
 {% endblock %}
