--- a/userpanal/static/userpanal/style.css
+++ b/userpanal/static/userpanal/style.css
@@ -2,7 +2,7 @@
 
 
 body {
-    background: white url("../images/background.jpg");
+    background: white url("images/background.jpg");
 }
 
 ul.errorlist {
