--- a/userpanal/templates/userpanal/pnr.html
+++ b/userpanal/templates/userpanal/pnr.html
@@ -1,37 +1,55 @@
 {% extends 'userpanal/base.html' %}
 
 
-
+{% load staticfiles %}
 {% block body %}
 
     <style>
         form{
             border-collapse: collapse;
-            width: 50%;
+            #width: 50%;
         }
     </style>
 
     {% include 'userpanal/Detail.html' %}
-    <div class="col-xs-9">
-        <div class="container-fluid">
+    <div class="col-xs-9 col-md-9">
             <div class="page-header">
                 <h2>PNR Status</h2>
             </div>
 
+            <div class="container-fluid  img-responsive">
+                <div class="row">
+                    <div class="col-xs-9 col-md-9">
+                        <form id="pnrstatus">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <div class="input-group form-group">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-primary  center-block " type="button" ><strong>PNR Number</strong></button>
+                                    </span>
+                                    <input class="form-control dd_user_input"  id="pnrno" type="text" placeholder="10 Digit PNR Number">
+                                    <span class="input-group-btn">
+                                        <button type = "submit" class = "btn btn-info">Submit</button>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
 
-            <form role = "form" action="" method="post" enctype="multipart/form-data">
-               {% csrf_token %}
-               <div class = "form-group">
-                  <input class = "form-control input-lg" type = "text" name="pnrno" placeholder ="Enter PNR Number">
-               </div>
-               <button type = "submit" class = "btn btn-default">Submit</button>
-            </form>
-        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div id="pnr_status_html"></div>
+
 
         <h4>
             <a href="{% url 'userpanal:pnrNotification' %}" > Start PNR Notification</a>
         </h4>
 
     </div>
+
+<script src="{% static 'userpanal/js/userpanal.js' %}"></script>
+
 
 {% endblock %}
