--- a/userpanal/templates/userpanal/Detail.html
+++ b/userpanal/templates/userpanal/Detail.html
@@ -14,7 +14,8 @@
         <div class="row">
             <a href="{% url 'Cancelled_Trains:cancelledTrains' %}" class="btn btn-primary">Cancelled Trains</a>
             <a href="{% url 'Train_Name_Number:trainNameNumber' %}" class="btn btn-primary">Train Name/Number</a>
-
+            <a href="{% url 'Train_Fair_Enquiry:trainFairEnquiry' %}" class="btn btn-primary">Train Fair Enquiry</a>
+            <a href="{% url 'Train_Arrivals_At_Station:trainArrivalsAtStation' %}" class="btn btn-primary">Train Arrivals At Station</a>
         </div>
         <hr>
     </div>
