--- a/userpanal/templates/userpanal/index.html
+++ b/userpanal/templates/userpanal/index.html
@@ -79,6 +79,9 @@
                     <div class="col-xs-4">
                         <a href="{% url 'Live_Train_Status:liveTrainStatus' %}" class="btn btn-primary  center-block"><h4>Live Train Status</h4></a></p>
                     </div>
+                    <div class="col-xs-4">
+                        <a href="{% url 'Train_Arrivals_At_Station:trainArrivalsAtStation' %}" class="btn btn-primary  center-block"><h4>Train Arrivals At Station</h4></a></p>
+                    </div>
                 </div>
 
             </div>
